# generic_subscriber_pkg

./: CMakeLists.txt  README.md  package.xml
src/: float_publisher.cpp  generic_subscriber.cpp  string_publisher.cpp
