<?xml version="1.0"?>
<package format="3">
  <name>generic_subscriber_pkg</name>
  <version>0.0.0</version>
  <description>ROS 2 Generic Subscriber with Test Publishers</description>
  <maintainer email="cherniyassine395@gmail.com">yassine cherni</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>